--- a/bosch_production_app/templates/bosch_production_app/auth_templates/login.html
+++ b/bosch_production_app/templates/bosch_production_app/auth_templates/login.html
@@ -24,31 +24,26 @@
                                     <h5 class="text-center font-weight-light">Sign In to <strong>Bosch Production System</strong></h5>
                                 </div>
                                 <div class="card-body">
-                                    <form>
+                                    <form method="POST" action="{% url 'perform_login' %}">
+                                        {% csrf_token %}
                                         <div class="form-group">
-                                            <label class="mb-1" for="inputEmailAddress">Email</label>
-                                            <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter email address" />
+                                            <label class="mb-1" for="username">Username</label>
+                                            <input class="form-control" id="username" type="text" placeholder="Insert Username" name="username" autofocus required />
                                         </div>
                                         <div class="form-group">
-                                            <label class="mb-1" for="inputPassword">Password</label>
-                                            <input class="form-control" id="inputPassword" type="password" placeholder="Enter password" />
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox">
-                                                <input class="custom-control-input" id="rememberPasswordCheck" type="checkbox" />
-                                                <label class="custom-control-label" for="rememberPasswordCheck">Remember Me</label>
-                                            </div>
+                                            <label class="mb-1" for="password">Password</label>
+                                            <input class="form-control" id="password" type="password" placeholder="Insert password" name="password" required />
                                         </div>
                                         <hr>
                                         <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="small" href="">Forgot Password?</a>
-                                            <a class="btn btn-primary" href="">Login</a>
+                                            <button class="btn btn-primary" type="submit">Login</button>
                                         </div>
                                     </form>
                                 </div>
                                 <div class="card-footer text-center">
                                     <div class="small">Don't have an account on Bosch Production System ?
-                                        <a href="">Sign up !</a>
+                                        <a href="{% url 'signup' %}">Sign up !</a>
                                     </div>
                                 </div>
                             </div>
