--- a/bosch_production_app/templates/bosch_production_app/operator_templates/base.html
+++ b/bosch_production_app/templates/bosch_production_app/operator_templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Bosch Production System | Admin</title>
+    <title>Bosch Production System | Operator</title>
     <link href="{% static 'bosch_production_app/css/styles.css' %}" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'admin_home' %}"><strong>BPS</strong> Master</a>
+        <a class="navbar-brand" href="{% url 'operator_home' %}"><strong>BPS</strong> Master</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
@@ -31,7 +31,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i> {{ user.first_name }} {{ user.last_name }} </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">Profile</a>
+                    <a class="dropdown-item" href="{% url 'operator_profile' %}">Profile</a>
                     <a class="dropdown-item" href="#">Settings</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'perform_logout' %}">Logout</a>
@@ -41,7 +41,7 @@
     </nav>
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
-            {% include 'bosch_production_app/admin_templates/sidebar.html' %}
+            {% include 'bosch_production_app/operator_templates/sidebar.html' %}
         </div>
         <div id="layoutSidenav_content">
             {% block main_content %} {% endblock %}
