--- a/bosch_production_app/templates/bosch_production_app/operator_templates/sidebar.html
+++ b/bosch_production_app/templates/bosch_production_app/operator_templates/sidebar.html
@@ -10,12 +10,7 @@
                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                 Dashboard
             </a>
-            <div class="sb-sidenav-menu-heading">Daily Tasks</div>
-            <a class="nav-link" href="{% url 'production_entry' %}">
-                <div class="sb-nav-link-icon"><i class="fas fa-adjust"></i></div>
-                Production Entry
-            </a>
-            <div class="sb-sidenav-menu-heading">Reports</div>
+            <div class="sb-sidenav-menu-heading">Daily Production Entry</div>
             <a class="nav-link" href="{% url 'operator_laser_production' %}">
                 <div class="sb-nav-link-icon"><i class="fas fa-adjust"></i></div>
                 Laser Production
