Counter Dashboard Created

--- a/bosch_production_app/templates/bosch_production_app/admin_templates/dashboard.html
+++ b/bosch_production_app/templates/bosch_production_app/admin_templates/dashboard.html
@@ -10,48 +10,52 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card text-white bg-primary mb-3">
-          <div class="card-header">Header</div>
+          <div class="card-header">Departments</div>
           <div class="card-body">
-            <h5 class="card-title">Primary card title</h5>
+            <h5 class="card-title">{{ departments }}</h5>
+            <hr>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <button type="button" class="btn btn-warning">Manage</button>
+              <button type="button" class="btn btn-outline-light">Register</button>
             </p>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card text-white bg-success mb-3">
-          <div class="card-header">Header</div>
+          <div class="card-header">Employees</div>
           <div class="card-body">
-            <h5 class="card-title">Success card title</h5>
+            <h5 class="card-title">{{ employees }}</h5>
+            <hr>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <button type="button" class="btn btn-danger">Manage</button>
+              <button type="button" class="btn btn-outline-light">Register</button>
             </p>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card text-white bg-danger mb-3">
-          <div class="card-header">Header</div>
+          <div class="card-header">Components</div>
           <div class="card-body">
-            <h5 class="card-title">Danger card title</h5>
+            <h5 class="card-title">{{ components }}</h5>
+            <hr>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <button type="button" class="btn btn-success">Manage</button>
+              <button type="button" class="btn btn-outline-light">Register</button>
             </p>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card text-dark bg-warning mb-3">
-          <div class="card-header">Header</div>
+          <div class="card-header">Machines</div>
           <div class="card-body">
-            <h5 class="card-title">Warning card title</h5>
+            <h5 class="card-title">{{ machines }}</h5>
+            <hr>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              <button type="button" class="btn btn-primary">Manage</button>
+              <button type="button" class="btn btn-outline-light">Register</button>
             </p>
           </div>
         </div>
